--- a/starter-code/contact.css
+++ b/starter-code/contact.css
@@ -24,35 +24,123 @@
 }
 
 body {
-    position: relative;
-    width: 100%;
-    height: 984px;
+    height: automate;
     background-color: #FFFFFF;
     font-family: 'Livvic', sans-serif;
     border: 5px solid #947;
 }
 
 .container {
-    position: absolute;
     width: 100%;
-    height: 789px;
-    background: var(--body-color);
+     background: var(--body-color);
+     border: 1px solid black;
 }
 
 header {
-    position: absolute;
-    width: 1110px;
-    height: 48px;
-    top: 73px;
-    left: 165px;
     display: flex;
-    /* justify-content: space-around; */
+    width: 75%;
+    margin: 3rem auto 0 auto;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.logo{
+    margin: 0px 0px 0px 0.5rem;
+}
+
+.nav-links{
+    border: 2px solid black;
+    position: absolute;
+    left: 500px;
+    top: 65px;
+    display: flex;
+    width: 10%;
+    justify-content: space-between;
     align-items: center;
 }
 
-header a{
-    position: absolute;
-    display: flex;
-    justify-content: space-around;
+.nav-links a{
+    color: #FFF;
 }
 
+.btn-1{
+    border-radius: 50px;
+    padding: 10px 30px;
+    margin: 0px 0.5rem 0px 0;
+    align-items: center;
+    color: #FFF;
+    border:2px solid#FFFFFF;
+    background: none;
+    font-size: 1rem;
+}
+
+.content{
+    border: 2px solid black;
+    display: flex;
+    width: 75%;
+    align-items: center;
+    margin: 5rem auto;
+}
+/* Footer */
+
+.footer {
+    border: 2px solid black;
+    background: var(--footer-color);
+    display: flex;
+    /* width: %; */
+    align-items: center;
+    margin: 0 auto;
+}
+
+.row{
+    padding: 1em 1em;
+}
+
+.footer-content {
+    width: 75%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 3rem;
+}
+
+.footer-nav-links{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    margin: 2rem 0px 0px 0.5rem;
+}
+
+.footer-nav-links a{
+    color: #FFF;
+}
+
+.address{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 0 0 10rem;
+    line-height: 1.5rem;
+    color: var(--footer-text);
+}
+
+.socials{
+    margin: 0 0 0 15rem;
+    justify-content: right;
+    text-align: right;
+    line-height: 3rem;
+    color: var(--footer-text);
+}
+
+.social-icons{
+    display: inline-block;
+    gap: 50rem;
+}
+
+@media screen and (max-width: 850px) {
+    .footer-content .row {
+      grid-template-columns: 1fr;
+    }
+  
+  }
