--- a/starter-code/contact.css
+++ b/starter-code/contact.css
@@ -28,12 +28,13 @@ body {
     background-color: #FFFFFF;
     font-family: 'Livvic', sans-serif;
     border: 5px solid #947;
+    background: var(--body-color);
 }
 
 .container {
     width: 100%;
      background: var(--body-color);
-     border: 1px solid black;
+     /* border: 1px solid black; */
 }
 
 header {
@@ -42,7 +43,6 @@ header {
     margin: 3rem auto 0 auto;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
 }
 
 .logo{
@@ -50,7 +50,6 @@ header {
 }
 
 .nav-links{
-    border: 2px solid black;
     position: absolute;
     left: 500px;
     top: 65px;
@@ -85,7 +84,6 @@ header {
 /* Footer */
 
 .footer {
-    border: 2px solid black;
     background: var(--footer-color);
     display: flex;
     /* width: %; */
