--- a/starter-code/contact.css
+++ b/starter-code/contact.css
@@ -19,7 +19,7 @@
     --h3-color: #F67E7E;
     --sidenav-color: #;
     --desktop-width: 80vw;
-    --mobile-width: 95vw;
+    --mobile-width: 100svw;
     --tablet-width: 90vw;
 }
 
@@ -34,7 +34,7 @@ body {
 .container {
     width: 100%;
     margin: 0 auto;
-     background: var(--body-color);
+    background: var(--body-color);
 }
 
 header {
@@ -49,18 +49,22 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 40%;
+    width: 45%;
 }
 
 .links{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 40%;
+    width: 35%;
+}
+
+.links > a{
+    color: #FFFFFF;
 }
 nav{
     display: flex;
-    /* width: 20%; */
+    width: 15%;
     align-items: center;
     justify-content: space-between;
 }
@@ -69,9 +73,9 @@ nav{
     color: #FFFFFF;
 }
 
-nav:nth-child(1),nav:nth-child(2){
-
-}
+/* .openNav{
+    display: none;
+} */
 
 /* .logo{
     margin: 0px 0px 0px 0.5rem;
@@ -130,7 +134,7 @@ nav:nth-child(1),nav:nth-child(2){
 .btn-1{
     border-radius: 50px;
     padding: 10px 30px;
-    margin: 0px 0.5rem 0px 0;
+    margin: 0 0.5rem 0 0;
     align-items: center;
     color: #FFF;
     border:2px solid#FFFFFF;
@@ -176,7 +180,7 @@ nav:nth-child(1),nav:nth-child(2){
 .content-body-left h3{
     font-size: 2rem;
     font-weight: 700;
-    line-height: 3rem;
+    line-height: 5rem;
     color: #F67E7E;
 }
 
@@ -232,6 +236,8 @@ form .input-box textarea::placeholder{
     line-height: 40px;
     font-size: 1.2rem;
     color: #FFFFFF;
+    padding-left: 2rem;
+    padding-bottom: 1rem;
     background: transparent;
 }
 
@@ -272,10 +278,10 @@ form .input-box textarea:is(:focus){
 }
 
 .footer-nav-links{
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 2rem 0px 0px 0.5rem;
+    margin: 2rem 0 0 0;
 }
 
 .footer-nav-links a{
@@ -326,16 +332,219 @@ form .input-box textarea:is(:focus){
        grid-template-columns: 1fr;
     
     }
-    
-  }
 
-  /* @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  } */
-
-  @media screen and (max-width: 375px) {
+    body{
+        overflow-x: hidden;
+        width: var(--mobile-width);
+    }
     .content {
       grid-template-columns: 1fr;
+    }
+    .links, .nav{
+        display: none;;
+    }
+    .content-body-left{
+        margin-bottom: 1rem;
+    }
+    .content-body-left h1{
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 2rem;
+        color: #FFFFFF;
+    }
+
+    .content-body-left h3{
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 48px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 2rem;
+        color: #F67E7E;
+    }
+
+    .content-body-left p{
+        font-size: 1.2rem;
+        line-height: 36px;
+        color: #FFFFFF;
+        border: 2px solid black;
+    }
+
+    .links, .nav{
+        display: none;
+    }
+    .side-right{
+        position: absolute;
+        left: 18.5rem;
+        top: 66rem;
+        width: 88px;
+        overflow: hidden;
+    }
+    .side-right img{
+        width: 175px;
+        height: 150px;
+    }
+    /* footer */
+
+    .footer{
+        display: flex;
+        align-items: center;
+        margin: 0;
+    }
+
+    .footer-content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem 0;
+    }
+
+    .address{
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0;
+        text-align: center;
+    }
+
+    .socials{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .social-icons{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .socials > p{
+        line-height: 25px;
+        font-size: 14px;
+        align-items: center;
+    }
+}
+
+  @media screen and (max-width: 375px) {
+    body{
+        overflow-x: hidden;
+        width: var(--mobile-width);
+    }
+
+    .container{
+        overflow-x: hidden;
+    }
+
+    .logo > img{
+        width: 100px;
+    }
+    .content {
+      grid-template-columns: 1fr;
+    }
+
+    .content-body-left{
+        margin-bottom: 1rem;
+    }
+    .content-body-left h1{
+        font-size: 40px;
+        font-weight: 700;
+        line-height: 40px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 2rem;
+        color: #FFFFFF;
+    }
+
+    .content-body-left h3{
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 48px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 2rem;
+        color: #F67E7E;
+    }
+
+    .content-body-left p{
+        font-size: .8rem;
+        line-height: 36px;
+        color: #FFFFFF;
+    }
+
+    .links, .nav{
+        display: none;
+    }
+    .side-right{
+        position: absolute;
+        left: 14.5rem;
+        top: 66rem;
+        width: 88px;
+        overflow: hidden;
+    }
+    .side-right img{
+        width: 175px;
+        height: 150px;
+    }
+    /* footer */
+
+    .footer{
+        display: flex;
+        align-items: center;
+        width: auto;
+        margin: 0;
+        position: absolute;
+        right: 0;
+        left: 0;
+    }
+
+    .footer-content{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 3rem 0;
+    }
+
+    .address{
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0;
+        text-align: center;
+    }
+
+    .socials{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .social-icons{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .socials > p{
+        line-height: 25px;
+        font-size: 14px;
+        align-items: center;
     }
 }
