--- a/about.css
+++ b/about.css
@@ -167,6 +167,7 @@ body {
     height: 253px;
     width: 21.875rem;
     background-color: #012F34;
+    perspective: 1000px;
 }
 /* images */
 .box img {
@@ -196,11 +197,36 @@ body {
     line-height: 25px;
     color: #FFFFFF;
 }
+
+.flip-card-inner {
+    transition: transform 2s;
+    transform-style: preserve-3d;
+}
+
+.box:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+  
+.flip-card-back {
+    transform: rotateY(180deg);
+}
 /* svg */
 .cross-svg {
     width: 3.5rem;
     height: 3.5rem;
-    margin-top: 38px;
+    margin-top: 14rem;
     margin-left: 147px;
     background: #F67E7E;
     border-radius: 28px;
@@ -710,6 +736,10 @@ body {
     }
     .container-2{        
         margin-left: 15px;
+    }
+    .container-2 .cross-svg{
+        position: absolute;
+        margin-top: 14rem;
     }
     .container-1{
         display: none;
