--- a/contact.css
+++ b/contact.css
@@ -5,20 +5,9 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-<<<<<<< HEAD
-<<<<<<< HEAD
+
     text-decoration: none;
     scroll-behavior: smooth;
-=======
-    text-decoration: none !important;;
-    scroll-behavior: smooth;
-    -webkit-font-smoothing: antialiased;
->>>>>>> f7d7c59 (Added new changes)
-=======
-    text-decoration: none !important;;
-    scroll-behavior: smooth;
-    -webkit-font-smoothing: antialiased;
->>>>>>> f7d7c59 (Added new changes)
 }
 
 :root{
@@ -271,14 +260,6 @@ form .input-box textarea:is(:focus){
 .footer {
     background: var(--footer-color);
     display: flex;
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-    /* width: %; */
->>>>>>> f7d7c59 (Added new changes)
-=======
-    /* width: %; */
->>>>>>> f7d7c59 (Added new changes)
     align-items: center;
     margin: 0 auto;
 }
@@ -334,8 +315,7 @@ form .input-box textarea:is(:focus){
   
   }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
+
   @media screen and (max-width: 768px) and (min-width: 481px) {
     body {
         overflow-x: hidden;
@@ -466,9 +446,7 @@ form .input-box textarea:is(:focus){
       
   }
   @media screen and (max-width: 480px) and (min-width: 320px) {
-=======
-=======
->>>>>>> f7d7c59 (Added new changes)
+  }
   @media screen and (max-width: 768px){
     .footer-content .row {
         grid-template-columns: 1fr;
@@ -480,10 +458,6 @@ form .input-box textarea:is(:focus){
      }
   }
   @media screen and (max-width: 480px) {
-<<<<<<< HEAD
->>>>>>> f7d7c59 (Added new changes)
-=======
->>>>>>> f7d7c59 (Added new changes)
     .content-body {
 
        grid-template-columns: 1fr;
@@ -529,14 +503,6 @@ form .input-box textarea:is(:focus){
         font-size: 1.2rem;
         line-height: 36px;
         color: #FFFFFF;
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-        border: 2px solid black;
->>>>>>> f7d7c59 (Added new changes)
-=======
-        border: 2px solid black;
->>>>>>> f7d7c59 (Added new changes)
     }
 
     .links, .nav{
@@ -682,18 +648,12 @@ form .input-box textarea:is(:focus){
         align-items: center;
         margin: 3rem 0;
     }
-<<<<<<< HEAD
-<<<<<<< HEAD
     .content-right > nav{
         width: 100%;
     }
     .footer-nav-links{
         width: 100%;
     }
-=======
->>>>>>> f7d7c59 (Added new changes)
-=======
->>>>>>> f7d7c59 (Added new changes)
 
     .address{
         width: 90%;
