--- a/contact.css
+++ b/contact.css
@@ -275,6 +275,9 @@ form .input-box textarea:is(:focus){
     gap: 3rem;
 }
 
+.foot-link{
+    width: 100%;
+}
 .footer-nav-links{
     width: 100%;
     display: flex;
@@ -371,8 +374,8 @@ form .input-box textarea:is(:focus){
     .side-right{
         position: absolute;
         left: 41.5rem;
-        top: 60rem;
-        width: 88px;
+        top: 61.5rem;
+        width: 104px;
         overflow: hidden;
     }
     
@@ -420,7 +423,8 @@ form .input-box textarea:is(:focus){
         margin: 2rem .5rem ;
       }
     
-    .footer-nav-links{
+    .foot-link{
+        width: 40%;
         margin: 5rem 0 0;
     }
 
