--- a/contact.css
+++ b/contact.css
@@ -74,14 +74,6 @@ nav{
     color: #FFFFFF;
 }
 
-/* .openNav{
-    display: none;
-} */
-
-/* .logo{
-    margin: 0px 0px 0px 0.5rem;
-} */
-
 /* side bar */
 /* .sidenav{
     height: 50%;
@@ -206,10 +198,6 @@ nav{
     margin-block: auto;
 }
 
-/* .content-body-right{
-    
-} */
-
 form .input-box{
     position: relative;
     background:var(--body-color);
@@ -280,6 +268,7 @@ form .input-box textarea:is(:focus){
 .foot-link{
     width: 100%;
 }
+
 .footer-nav-links{
     width: 100%;
     display: flex;
@@ -318,6 +307,8 @@ form .input-box textarea:is(:focus){
     }
   
   }
+
+  /* Tablet view */
 
   @media screen and (max-width: 768px) and (min-width: 481px) {
     body {
@@ -449,18 +440,8 @@ form .input-box textarea:is(:focus){
       }
       
   }
-  @media screen and (max-width: 480px) and (min-width: 320px) {
-=======
-  @media screen and (max-width: 768px){
-    .footer-content .row {
-        grid-template-columns: 1fr;
-      }
-      .content-body {
 
-        grid-template-columns: 1fr;
-     
-     }
-  }
+  /* Mobile view Medium */
   @media screen and (max-width: 480px) {
     .content-body {
 
@@ -570,6 +551,7 @@ form .input-box textarea:is(:focus){
     }
 }
 
+/* Mobile view small */
   @media screen and (max-width: 375px) {
     body{
         overflow-x: hidden;
