Added JavaScript file and added changes to the html and css files

--- a/about.css
+++ b/about.css
@@ -235,9 +235,10 @@ body {
 .flip-card-inner {
     transition: transform 2s;
     transform-style: preserve-3d;
+    cursor: pointer;
 }
 
-.box:hover .flip-card-inner {
+.flip-card-inner.flip {
     transform: rotateY(180deg);
 }
 
