--- a/about.css
+++ b/about.css
@@ -279,8 +279,8 @@ body {
 /* svg */
 .close-svg {
     width: 3.5rem;
-    height: 56px;
-    margin-top: 38px;
+    height: 3.5rem;
+    margin-top: 2.3rem;
     margin-left: 147px;
     background: #79C8C7;
     border-radius: 28px;
@@ -451,7 +451,7 @@ body {
     opacity: 0.6;
 }
 /* Tablet responsiveness */
-@media  only screen and (max-width:768px) and (min-width:480px) {
+@media  only screen and (max-width:820px) and (min-width:480px) {
     .page{
         width: 100%;
         height: 100%;
